# forms-flow-ai

./: .env  .gitattributes  .gitignore  .project  .trivyignore.yaml  CHANGELOG.md  CLAUDE.md  CODEOFCONDUCT.md  CODEOWNERS  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  Dockerfile.txt  Jenkinsfile  LICENSE  README.md  USAGE.md  VERSION  docker-compose-web.yml  docker-compose.yml  formsflowscript.sh  installationAutomation.bat  local.env  on  package-lock.json  package.json  sample-reference.env  sample.env
.github/: pull_request_template.md
Formsflow_scripts/: Script1631100508300.groovy  TestSample.prj  console.properties
camunda-tasklist-vue/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  sample.env  vue.config.js
camunda-vue-tasklist/: package-lock.json  vue.config.js
code_script/: .gitignore  .project  build.gradle
deployment/: README.md
docs/: camunda.md  cli-helper-commands.md  forms-web-core.md  ghaction-secrets.md  mongo-patroni.md
forms-flow-analytics/: Dockerfile  LICENSE  README.md  docker-compose-linux.yml  docker-compose-windows.yml  docker-compose.yml  package-lock.json  package.json  redash.env  sample.env
forms-flow-api/: .gitignore  .snyk  Dockerfile  MANIFEST.in  Makefile  Openshift_Dockerfile  README.md  docker-compose-linux.yml  docker-compose-windows.yml  docker-compose.yml  entrypoint  entrypoint.sh  logo.txt  manage.py  migration.sh  openshift_custom_Dockerfile  requirements-dev.txt  requirements.txt  requirements_dev.txt  sample.env  setup.cfg  setup.py  wsgi.py
forms-flow-api-utils/: .gitignore  README.md  requirements.txt  setup.py
forms-flow-bpm/: .env  .gitignore  Custom_Dockerfile.txt  Dockerfile  Dockerfile-ARM64  README.md  devx-ci.yaml  docker-compose-linux.yml  docker-compose-windows.yml  docker-compose.yml  entrypoint.sh  local.env  openshift_custom_Dockerfile  pom-default.xml  pom-docker.xml  (+4 more)
forms-flow-bpm-utils/: pom.xml
forms-flow-data-layer/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  requirements.txt  sample.env  setup.cfg
forms-flow-data-layer/requirements/: base.txt  dev.txt
forms-flow-data-layer/src/: __init__.py
forms-flow-data-layer/src/config/: envs.py
forms-flow-data-layer/src/db/: __init__.py  bpmn_db.py  formio_db.py  redis_client.py  sql_base.py  webapi_db.py
forms-flow-data-layer/src/graphql/: setup.py
forms-flow-data-layer/src/graphql/resolvers/: __init__.py  form_resolvers.py  formio_form_resolvers.py  metric_resolvers.py  submission_resolvers.py
forms-flow-data-layer/src/graphql/schema/: __init__.py  form_schema.py  formio_form_schema.py  metric_schema.py  submission_schema.py
forms-flow-data-layer/src/graphql/service/: __init__.py  base_service.py  form_service.py  formio_form_service.py  metric_service.py  submission_service.py
forms-flow-data-layer/src/middlewares/: auth.py  pagination.py  role_check.py
forms-flow-data-layer/src/models/formio/: __init__.py  constants.py  form.py  submission.py
forms-flow-data-layer/src/models/webapi/: __init__.py  application.py  authorization.py  base.py  constants.py  form_process_mapper.py  formprocess_mapper.py
forms-flow-data-layer/src/routes/: __init__.py  health.py
forms-flow-data-layer/src/utils/: __init__.py  cache_helper.py  datetime_utils.py  keycloak_oidc.py  logger.py  sql_base.py  user_context.py
forms-flow-data-layer/tests/: conftest.py  utils.py
forms-flow-data-layer/tests/docker/: docker-compose.yml
forms-flow-data-layer/tests/docker/realms/: forms-flow-ai-realm.json
forms-flow-data-layer/tests/resolvers/: test_formio_form.py  test_submissions.py
forms-flow-documents/: Dockerfile  Dockerfile-ARM64  MANIFEST.in  Makefile  README.md  docker-compose.yml  entrypoint  gunicorn_config.py  logo.txt  manage.py  requirements.txt  sample.env  setup.cfg  setup.py  wsgi.py
forms-flow-documents/api-spec/: forms-flow-documents-api-spec.yaml
forms-flow-documents/docs/: README.md  forms-flow-api-swagger.json
forms-flow-documents/requirements/: dev.txt  prod.txt
forms-flow-documents/src/formsflow_documents/: __init__.py  app.py  config.py
forms-flow-documents/src/formsflow_documents/filters/: __init__.py  custom_filters.py
forms-flow-documents/src/formsflow_documents/helpers/: __init__.py  custom_filters.py  helper.py
forms-flow-documents/src/formsflow_documents/resources/: __init__.py  checkpoint.py  form_export.py  form_process_mapper.py  pdf.py
forms-flow-documents/src/formsflow_documents/services/: __init__.py  pdf.py
forms-flow-documents/src/formsflow_documents/static/js/: customformio.js  from_io_render.js
forms-flow-documents/src/formsflow_documents/templates/: index.html  template.html
forms-flow-documents/src/formsflow_documents/utils/: __init__.py  constants.py  util.py
forms-flow-documents/tests/: conftest.py
forms-flow-documents/tests/docker/: docker-compose.yml  nginx.conf
forms-flow-documents/tests/unit/api/: test_checkpoint.py  test_pdf.py
forms-flow-documents/tests/unit/conf/: __init__.py  test_configuration.py
forms-flow-documents/tests/unit/filters/: test_custom_filter.py
forms-flow-documents/tests/unit/services/: test_pdf.py
forms-flow-documents/tests/unit/utils/: test_logging.py  test_util.py  test_util_cors.py
forms-flow-documents/tests/utilities/: __init__.py  base_test.py  utils.py
jobs/sentiment-analysis/: .coverage  .env.template  Dockerfile  LICENSE  Makefile  README.md  config.py  coverage.xml  docker-entrypoint.sh  requirements.txt  run.sh  sentiment_analysis.py  setup.cfg  setup.py
jobs/sentiment-analysis/cron/: crontab
jobs/sentiment-analysis/dbms/: __init__.py  database_factory.py  db_client.py  dbms_enum.py  postgres.py  sqlserver.py
jobs/sentiment-analysis/requirements/: dev.txt  prod.txt
jobs/sentiment-analysis/tests/: __init__.py  conftest.py
jobs/sentiment-analysis/utils/: logger.py
(+3421 files in other folders)
