[metadata]
name = formsflow_data_layer
version = 7.1.0
author = AOT Technologies
license = Apache-2.0
description = Forms Flow Data Layer for unified data reading

[flake8]
max-line-length = 120
exclude = .git, __pycache__, venv, migrations
ignore = E203, E501, W503

[pylint]
max-line-length = 120
disable = too-many-instance-attributes, missing-docstring, E1101, W1203, W0718 
min-similarity-lines=30


[black]
line-length = 88
target-version = ['py39']

[isort]
profile = black
line_length = 88
multi_line_output = 3
indent = 4

[tool:pytest]
testpaths = tests
addopts = --strict --disable-warnings --cov=src --cov-report=term-missing
log_cli = true
log_cli_level = INFO
markers =
    slow: marks tests as slow
    serial: runs tests sequentially

[coverage:run]
branch = True
omit = tests/*
