[metadata]
name = formsflow_data_layer
version = 8.0.0-alpha
author = AOT Technologies
license = Apache-2.0
description = Forms Flow Data Layer for unified data reading

[flake8]
max-line-length = 88
exclude = .git,__pycache__,venv,migrations,build,dist
ignore = E203, E501, W503
show-source = true
statistics = true

[pylint]
max-line-length = 88
disable = too-many-instance-attributes,E1101,W1203,W0718
min-similarity-lines = 30
ignore = migrations, tests
output-format = colorized

[black]
line-length = 88
target-version = ['py39']
skip-string-normalization = false
skip-magic-trailing-comma = false

[isort]
profile = black
line_length = 88
multi_line_output = 3
indent = 4
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = src,tests
skip_gitignore = true

[tool:pytest]
testpaths = tests
addopts = --strict --disable-warnings --cov=src --cov-report=term-missing
log_cli = true
log_cli_level = INFO
markers =
    slow: marks tests as slow
    serial: runs tests sequentially

[coverage:run]
branch = True
omit = tests/*

[coverage:report]
show_missing = true
skip_covered = true
