[metadata]
name = formsflow_documents
version = 5.0.0
author = aot-technologies
classifiers =
    Development Status :: Beta
    Intended Audience :: Developers / QA
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.9
license = Apache Software License Version 2.0
description = forms flow api
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.6
include_package_data = True
packages = find:

[options.package_data]
api =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
exclude = .git,*migrations*,*venv*, .eggs*
docstring-min-length=10
per-file-ignores =
    */__init__.py:F401,I001
max-line-length = 120
ignore = E203,E501, Q000, D401, B902, I001, I003, I004, E126, W503, W504

[pycodestyle]
max_line_length = 80
ignore = E501
docstring-min-length=10
notes=FIXME,XXX # TODO is ignored
match_dir = src/formsflow_documents
ignored-modules=flask_sqlalchemy
    sqlalchemy
per-file-ignores =
    */__init__.py:F401

[pylint]
ignore=migrations,tests
max-line-length=120
notes=FIXME,XXX,TODO
ignored-modules=flask_sqlalchemy,sqlalchemy,SQLAlchemy,alembic,scoped_session
ignored-classes=scoped_session
disable=too-many-instance-attributes
min-similarity-lines=30
# ignore-comments=yes
# ignore-docstrings=yes
ignore-imports=yes
good-names=
    b,
    d,
    e,
    f,
    i,
    t,
    u,
    rv,
    logger



[isort]
profile = black
line_length = 80
indent = 4

[tool:pytest]
minversion = 2.0
testpaths = tests
addopts = --verbose
    --strict
    -p no:warnings
    --cov api
    --cov-report html
python_files = tests/*/test*.py
norecursedirs = .git .tox venv* requirements* build
log_cli = true
log_cli_level = 1
filterwarnings =
    ignore::UserWarning
markers =
    slow
    serial

[coverage:run]
branch = True
omit = 

[report:run]
exclude_lines =
    pragma: no cover
    from
    import
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
