[metadata]
name = sentiment_analysis
url = https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/
author = AOT Technologies
author_email =
classifiers =
    Development Status :: Beta
    Intended Audience :: Developers / QA
    Topic :: Sentiment Analysis
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.8
license = Apache Software License Version 2.0
description = A short description of the project
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.6
include_package_data = True
packages = find:

[options.package_data]
pay_api =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
ignore = I001, I003, I004, E126, W504
exclude = .git,*migrations*
max-line-length = 120
docstring-min-length=10
per-file-ignores =
    */__init__.py:F401

[pycodestyle]
max_line_length = 120
ignore = E501
docstring-min-length=10
notes=FIXME,XXX # TODO is ignored
match_dir = jobs
ignored-modules=
per-file-ignores =
    */__init__.py:F401
good-names=
    b,
    d,
    i,
    e,
    f,
    u,
    rv,
    logger,
    id,
    p,

[pylint]
ignore=test
max_line_length=120
notes=FIXME,XXX,TODO
ignored-modules=scoped_session
ignored-classes=scoped_session
min-similarity-lines=8
disable=C0301,W0511

[isort]
line_length = 120
indent = 4
multi_line_output = 4
lines_after_imports = 2


[tool:pytest]
addopts = --cov=tasks --cov-report html:htmlcov --cov-report xml:coverage.xml
testpaths = tests
filterwarnings =
    ignore::UserWarning
